syntax = "proto3";

package product.v1;

option go_package = "product-catalog-service/proto/product/v1;productv1";

// ProductService provides product catalog management
service ProductService {
    // Commands
    rpc CreateProduct(CreateProductRequest) returns (CreateProductReply);
    rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductReply);
    rpc ActivateProduct(ActivateProductRequest) returns (ActivateProductReply);
    rpc DeactivateProduct(DeactivateProductRequest) returns (DeactivateProductReply);
    rpc ApplyDiscount(ApplyDiscountRequest) returns (ApplyDiscountReply);
    rpc RemoveDiscount(RemoveDiscountRequest) returns (RemoveDiscountReply);
    rpc ArchiveProduct(ArchiveProductRequest) returns (ArchiveProductReply);

    // Queries
    rpc GetProduct(GetProductRequest) returns (GetProductReply);
    rpc ListProducts(ListProductsRequest) returns (ListProductsReply);
}

// Message definitions for commands

message CreateProductRequest {
    string name = 1;
    string description = 2;
    string category = 3;
    int64 base_price_numerator = 4;
    int64 base_price_denominator = 5;
}

message CreateProductReply {
    string product_id = 1;
}

message UpdateProductRequest {
    string product_id = 1;
    string name = 2;
    string description = 3;
    string category = 4;
}

message UpdateProductReply {}

message ActivateProductRequest {
    string product_id = 1;
}

message ActivateProductReply {}

message DeactivateProductRequest {
    string product_id = 1;
}

message DeactivateProductReply {}

message ApplyDiscountRequest {
    string product_id = 1;
    int64 discount_percent = 2;  // Stored as integer (e.g., 20 for 20%)
    int64 start_date_seconds = 3;
    int64 end_date_seconds = 4;
}

message ApplyDiscountReply {}

message RemoveDiscountRequest {
    string product_id = 1;
}

message RemoveDiscountReply {}

message ArchiveProductRequest {
    string product_id = 1;
}

message ArchiveProductReply {}

// Message definitions for queries

message GetProductRequest {
    string product_id = 1;
}

message GetProductReply {
    Product product = 1;
}

message ListProductsRequest {
    string category = 1;  // Optional filter
    int32 page_size = 2;
    string page_token = 3;
}

message ListProductsReply {
    repeated Product products = 1;
    string next_page_token = 2;
}

message Product {
    string product_id = 1;
    string name = 2;
    string description = 3;
    string category = 4;
    Money base_price = 5;
    Money effective_price = 6;
    Discount discount = 7;
    string status = 8;
    int64 created_at_seconds = 9;
    int64 updated_at_seconds = 10;
}

message Money {
    int64 numerator = 1;
    int64 denominator = 2;
}

message Discount {
    int64 percent = 1;
    int64 start_date_seconds = 2;
    int64 end_date_seconds = 3;
}
